--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,10 +25,13 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.google.firebase:firebase-auth:9.6.1'
-    compile 'com.google.firebase:firebase-database:9.6.1'
+    compile 'com.google.firebase:firebase-auth:10.0.1'
+    compile 'com.google.firebase:firebase-database:10.0.1'
     compile 'com.jakewharton:butterknife:8.5.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
     testCompile 'junit:junit:4.12'
     apply plugin: 'com.google.gms.google-services'
+
+    compile group: 'com.kakao.sdk', name: 'kakaolink', version: '1.1.36'
+    compile 'gun0912.ted:tedpermission:1.0.2'
 }
