급하니 우선 집에가서하자 homeadpater 만들면됨

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,8 @@
         <activity
             android:name=".CoupleapplyActivity">
         </activity>
-
+        <activity android:name=".HomeActivity">
+        </activity>
 
         <service
             android:name=".fcm.CpFirebaseMessagService">
