카테고리 삭제 예정 클립보드 저장시 알림으로 알려줌
알림으로 들어올때 바로 링크 등록하도록 하는걸 개발합시다.뀨뀨

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,8 +34,15 @@
         <activity
             android:name=".CoupleapplyActivity">
         </activity>
-        <activity android:name=".HomeActivity">
+        <activity android:name=".home.HomeActivity">
         </activity>
+
+        <receiver android:name=".service.ClipboardMonitorStarter">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+        <service android:name=".service.ClipboardMonitor"></service>
 
         <service
             android:name=".fcm.CpFirebaseMessagService">
