--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,5 +53,7 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:4.2.0'
     compile 'jp.wasabeef:glide-transformations:3.0.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.2.0'
+
+    compile group: 'org.jsoup', name: 'jsoup', version: '1.10.2'
 }
 apply plugin: 'com.google.gms.google-services'
