--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,5 +55,6 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.2.0'
 
     compile group: 'org.jsoup', name: 'jsoup', version: '1.10.2'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
 }
 apply plugin: 'com.google.gms.google-services'
