--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,11 +43,13 @@ dependencies {
     compile 'org.jsoup:jsoup:1.8.3' // required
     compile 'com.leocardz:link-preview:2.0.0@aar'
 
+    compile 'com.facebook.android:audience-network-sdk:4.+'
     compile 'com.jakewharton:butterknife:8.5.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
     testCompile 'junit:junit:4.12'
 
     compile group: 'com.kakao.sdk', name: 'kakaolink', version: '1.1.36'
+    compile group: 'com.kakao.sdk', name: 'usermgmt', version: '1.1.36'
     compile 'gun0912.ted:tedpermission:1.0.2'
 
     compile 'com.github.bumptech.glide:glide:4.2.0'
