--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,11 @@
 
     <uses-permission android:name="android.permission.SEND_SMS"/>
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
+        android:name=".MainApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -21,12 +24,14 @@
                     android:host="123" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".LoginActivity">
+        <activity android:name=".IntroActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".LoginActivity">
         </activity>
         <activity
             android:name=".CoupleconnectActivity">
@@ -36,7 +41,8 @@
         </activity>
         <activity android:name=".home.HomeActivity">
         </activity>
-
+        <activity android:name=".search.SearchActivity">
+        </activity>
         <receiver android:name=".service.ClipboardMonitorStarter">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
@@ -51,6 +57,17 @@
             </intent-filter>
         </service>
 
+        <activity
+
+            android:name="com.google.android.gms.ads.AdActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
+            android:theme="@android:style/Theme.Translucent" />
+        <meta-data
+
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
+
         <service
             android:name=".fcm.CpFirebaseIDService">
             <intent-filter>
@@ -63,6 +80,10 @@
         <meta-data
             android:name="com.kakao.sdk.AppKey"
             android:value="@string/kakao_app_key" />
+
+        <meta-data
+            android:name="com.kakao.sdk.ClientSecret"
+            android:value="@string/kakao_client_secret"/>
     </application>
 
 
